--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
   "rules": {
     "max-len": [1, 120, { "tabWidth": 2, "ignoreComments": true }],
     "linebreak-style": 0,
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "no-console": 0,
+    "quotes": 0
   }
 }
