blockchain p2p service and dificult mining blocks

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,12 @@
     "node": true
   },
   "rules": {
-    "max-len": [1, 120, { "tabWidth": 2, "ignoreComments": true }],
+    "max-len": [1, 256, { "tabWidth": 2, "ignoreComments": true }],
     "linebreak-style": 0,
+    "operator-linebreak": 0,
     "object-curly-newline": 0,
     "no-console": 0,
-    "quotes": 0
+    "quotes": 0,
+    "comma-dangle": 0
   }
 }
