--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-only-warn": "^1.0.3",
     "express": "^4.17.2",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
