--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.1",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
+    "elliptic": "^6.5.4",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
@@ -34,6 +35,7 @@
     "express": "^4.17.2",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
+    "uuid": "^8.3.2",
     "ws": "^8.4.0"
   },
   "jest": {
