--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-blockchain",
+  "name": "dummycoin-backend",
   "version": "1.0.0",
   "description": "Code based on Udemy course: \"Blockchain: Comprende Bitcoin y desarrolla tu Criptomoneda\"",
   "main": "index.js",
@@ -15,11 +15,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AdrianAgui/my-blockchain.git"
+    "url": "git+https://github.com/AdrianAgui/dummycoin-backend.git"
   },
   "author": "Adrian Aguirre",
   "license": "ISC",
-  "homepage": "https://github.com/AdrianAgui/my-blockchain#readme",
+  "homepage": "https://github.com/AdrianAgui/dummycoin-backend#readme",
   "dependencies": {
     "@babel/core": "^7.16.5",
     "@babel/node": "^7.16.5",
