--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/node": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
