--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "test": "jest",
-    "test:watch": "jest --watchAll",
-    "miner": "babel-node miner.js"
+    "test:watch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
